fix(css): hide avatar placeholder on mobile

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -182,6 +182,9 @@ pre {
     display: inline-block !important;
     margin-left: 0.5rem !important;
   }
+  .avatar-placeholder {
+    display: none !important;
+  }
 }
 
 .site-title-group {
